--- a/hands-on-machine-learning-with-scikit-learn-keras-and-tensorflow/5-support-vector-machines/02_non_linear_svm_classification.ipynb
+++ b/hands-on-machine-learning-with-scikit-learn-keras-and-tensorflow/5-support-vector-machines/02_non_linear_svm_classification.ipynb
@@ -6,7 +6,7 @@
       "name": "02-non-linear-svm-classification.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMpsOuaCNtChx4ZfVQZz7T7",
+      "authorship_tag": "ABX9TyN28G0ejF592cGTwI10aX6G",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -90,7 +90,7 @@
       "metadata": {
         "id": "mTusPrAIPxK1"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -118,7 +118,7 @@
       "metadata": {
         "id": "04NEI8SMQn9f"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -137,7 +137,7 @@
       "metadata": {
         "id": "jLRUHCnN9ep9"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -154,7 +154,7 @@
       "metadata": {
         "id": "Biv5ZyNS9i3g"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -223,7 +223,7 @@
           "height": 291
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -265,7 +265,7 @@
       "metadata": {
         "id": "Woy4NbU7Ufwr"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -282,7 +282,7 @@
         "id": "9GkQDs499PzR",
         "outputId": "e97cc6e2-1a36-46e8-92f1-7ee67c0aa7db"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -316,7 +316,7 @@
         "id": "kWs0X2TH9UVO",
         "outputId": "15ae5c2d-bd5d-4e43-89ac-49654fc0a5a3"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -348,7 +348,7 @@
         "id": "bJAJX7639tjq",
         "outputId": "82f49ffe-7d5f-4de5-9d2e-a727eee71e4b"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -363,6 +363,19 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Adding polynomial features is simple to implement and can work great with all sorts\n",
+        "of Machine Learning algorithms (not just SVMs). \n",
+        "\n",
+        "That said, at a low polynomial\n",
+        "degree, **this method cannot deal with very complex datasets, and with a high polynomial degree it creates a huge number of features, making the model too slow.**"
+      ],
+      "metadata": {
+        "id": "h5GGasu0-0sC"
+      }
     },
     {
       "cell_type": "markdown",
