--- a/hands-on-machine-learning-with-scikit-learn-keras-and-tensorflow/8-dimensionality-reduction/02_dimensionality_reduction_exercise.ipynb
+++ b/hands-on-machine-learning-with-scikit-learn-keras-and-tensorflow/8-dimensionality-reduction/02_dimensionality_reduction_exercise.ipynb
@@ -6,7 +6,7 @@
       "name": "02-dimensionality-reduction-exercise.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPcUQC8yt3XrsYx3BxE5VsD",
+      "authorship_tag": "ABX9TyMZKs77oRJjo8q430eQlOWn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##Dimensionality reduction based on projection"
+        "##Dimensionality Reduction Exercise"
       ],
       "metadata": {
         "id": "bg1B9IbnnPYY"
