--- a/hands-on-machine-learning-with-scikit-learn-keras-and-tensorflow/6-decision-trees/decision_trees.ipynb
+++ b/hands-on-machine-learning-with-scikit-learn-keras-and-tensorflow/6-decision-trees/decision_trees.ipynb
@@ -6,7 +6,7 @@
       "name": "decision-trees.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOWErwR/jCyRaDLZIv91bla",
+      "authorship_tag": "ABX9TyOTmpPKkuWGMZBImZgDaIr/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -96,7 +96,7 @@
       "metadata": {
         "id": "UemV2I_DkudS"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -118,7 +118,7 @@
       "metadata": {
         "id": "-s4WQAbCk4P_"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -159,7 +159,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -196,7 +196,7 @@
       "metadata": {
         "id": "FuPlzH3kl3L0"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -222,7 +222,7 @@
           "height": 440
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -327,7 +327,7 @@
           "height": 291
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -366,7 +366,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -393,7 +393,7 @@
       "metadata": {
         "id": "rEiR4UENqIH5"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -409,7 +409,7 @@
           "height": 598
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -468,7 +468,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -494,7 +494,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -532,7 +532,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -558,7 +558,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -571,6 +571,24 @@
           "execution_count": 31
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##The CART Training Algorithm"
+      ],
+      "metadata": {
+        "id": "QZBF1CtQcCgW"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "ixnjYW35cDnO"
+      }
     }
   ]
 }
