--- a/hands-on-machine-learning-with-scikit-learn-keras-and-tensorflow/9-unsupervised-learning-techniques/01_clustering_fundamental.ipynb
+++ b/hands-on-machine-learning-with-scikit-learn-keras-and-tensorflow/9-unsupervised-learning-techniques/01_clustering_fundamental.ipynb
@@ -6,7 +6,7 @@
       "name": "01-clustering-fundamental.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMMQzr3I7BKSWLDHbdu97Ul",
+      "authorship_tag": "ABX9TyNKMxVc+rrxH3uHQNK4nfrX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,7 +63,7 @@
         "* K-Means\n",
         "* DBSCAN\n",
         "\n",
-        " and some of their applications, such as nonlinear dimensionality\n",
+        "And these are the some of their applications, such as nonlinear dimensionality\n",
         "reduction, semi-supervised learning, and anomaly detection."
       ],
       "metadata": {
@@ -152,11 +152,11 @@
         "data.target_names"
       ],
       "metadata": {
-        "id": "7aopZY_XxtPS",
-        "outputId": "7a4542e2-042b-4ad8-fb6d-74b87863e8e6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "7aopZY_XxtPS",
+        "outputId": "7a4542e2-042b-4ad8-fb6d-74b87863e8e6"
       },
       "execution_count": 2,
       "outputs": [
@@ -216,12 +216,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "qjS2Llm5xxR_",
-        "outputId": "ed17522f-bd7e-42c6-caff-9546aa1b8550",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 259
-        }
+        },
+        "id": "qjS2Llm5xxR_",
+        "outputId": "ed17522f-bd7e-42c6-caff-9546aa1b8550"
       },
       "execution_count": 3,
       "outputs": [
@@ -286,12 +286,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "52Uf3qXY097d",
-        "outputId": "803d4e7a-4585-47f9-bf6e-637c0ce84cc3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 286
-        }
+        },
+        "id": "52Uf3qXY097d",
+        "outputId": "803d4e7a-4585-47f9-bf6e-637c0ce84cc3"
       },
       "execution_count": 6,
       "outputs": [
@@ -324,11 +324,11 @@
         "np.sum(y_pred==y)"
       ],
       "metadata": {
-        "id": "o6mS-JFz1JFH",
-        "outputId": "ff184888-ae8e-43f0-fa41-ec65cda327b2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "o6mS-JFz1JFH",
+        "outputId": "ff184888-ae8e-43f0-fa41-ec65cda327b2"
       },
       "execution_count": 7,
       "outputs": [
@@ -350,11 +350,11 @@
         "np.sum(y_pred==y) / len(y_pred)"
       ],
       "metadata": {
-        "id": "PN8azE6z1Om-",
-        "outputId": "c64a651d-0561-4fef-c0b1-b2d2d9d2e621",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "PN8azE6z1Om-",
+        "outputId": "c64a651d-0561-4fef-c0b1-b2d2d9d2e621"
       },
       "execution_count": 8,
       "outputs": [
