--- a/hands-on-machine-learning-with-scikit-learn-keras-and-tensorflow/9-unsupervised-learning-techniques/01_clustering_fundamental.ipynb
+++ b/hands-on-machine-learning-with-scikit-learn-keras-and-tensorflow/9-unsupervised-learning-techniques/01_clustering_fundamental.ipynb
@@ -6,7 +6,7 @@
       "name": "01-clustering-fundamental.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNKMxVc+rrxH3uHQNK4nfrX",
+      "authorship_tag": "ABX9TyPLyVCoNa+65Aoln+ohfXru",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,8 +60,8 @@
         "\n",
         "There are two popular clustering algorithms:\n",
         "\n",
-        "* K-Means\n",
-        "* DBSCAN\n",
+        "* **K-Means**\n",
+        "* **DBSCAN**\n",
         "\n",
         "And these are the some of their applications, such as nonlinear dimensionality\n",
         "reduction, semi-supervised learning, and anomaly detection."
