--- a/hands-on-machine-learning-with-scikit-learn-keras-and-tensorflow/9-unsupervised-learning-techniques/01_clustering_fundamental.ipynb
+++ b/hands-on-machine-learning-with-scikit-learn-keras-and-tensorflow/9-unsupervised-learning-techniques/01_clustering_fundamental.ipynb
@@ -6,7 +6,7 @@
       "name": "01-clustering-fundamental.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM296YexlVjtn9p9FvCwCoC",
+      "authorship_tag": "ABX9TyNv29Z0YEkmsnBFHnaCkLWm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -171,6 +171,15 @@
           "execution_count": 2
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Let's define some ploting methods."
+      ],
+      "metadata": {
+        "id": "o1VqR3yCwZJe"
+      }
     },
     {
       "cell_type": "code",
@@ -500,12 +509,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "JLuJNbnSpOHv",
-        "outputId": "54b55c53-39cf-47d8-9730-7c2e00b8226a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 287
-        }
+        },
+        "id": "JLuJNbnSpOHv",
+        "outputId": "54b55c53-39cf-47d8-9730-7c2e00b8226a"
       },
       "execution_count": 11,
       "outputs": [
@@ -571,11 +580,11 @@
         "y_pred"
       ],
       "metadata": {
-        "id": "7PwTBSBDqK2B",
-        "outputId": "9c99c529-efb9-49f0-9034-2a8de07fd0f4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "7PwTBSBDqK2B",
+        "outputId": "9c99c529-efb9-49f0-9034-2a8de07fd0f4"
       },
       "execution_count": 13,
       "outputs": [
@@ -597,11 +606,11 @@
         "y_pred is kmeans.labels_"
       ],
       "metadata": {
-        "id": "s0_Vl1GBqRdj",
-        "outputId": "ba7a6e04-7ed1-4b7e-fd28-895443d626c2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "s0_Vl1GBqRdj",
+        "outputId": "ba7a6e04-7ed1-4b7e-fd28-895443d626c2"
       },
       "execution_count": 15,
       "outputs": [
@@ -632,11 +641,11 @@
         "kmeans.cluster_centers_"
       ],
       "metadata": {
-        "id": "G8yxnR9iqcMv",
-        "outputId": "44ad554b-9663-4780-efba-f0be4806b377",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "G8yxnR9iqcMv",
+        "outputId": "44ad554b-9663-4780-efba-f0be4806b377"
       },
       "execution_count": 16,
       "outputs": [
@@ -672,11 +681,11 @@
         "kmeans.predict(x_new)"
       ],
       "metadata": {
-        "id": "6lAZF9a7qkQT",
-        "outputId": "544e405b-0c7f-432a-dfd9-ff3f1f4fde04",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "6lAZF9a7qkQT",
+        "outputId": "544e405b-0c7f-432a-dfd9-ff3f1f4fde04"
       },
       "execution_count": 17,
       "outputs": [
@@ -710,12 +719,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "kGgmxtHkrCEP",
-        "outputId": "945dbfee-4e6a-4ac3-a708-1b321b1186a1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 287
-        }
+        },
+        "id": "kGgmxtHkrCEP",
+        "outputId": "945dbfee-4e6a-4ac3-a708-1b321b1186a1"
       },
       "execution_count": 19,
       "outputs": [
@@ -762,11 +771,11 @@
         "kmeans.transform(x_new)"
       ],
       "metadata": {
-        "id": "XAioOtSoroE0",
-        "outputId": "a86434c1-774f-4f53-8dbd-d39cf59d2e7a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "XAioOtSoroE0",
+        "outputId": "a86434c1-774f-4f53-8dbd-d39cf59d2e7a"
       },
       "execution_count": 20,
       "outputs": [
@@ -800,11 +809,11 @@
         "np.linalg.norm(np.tile(x_new, (1, k)).reshape(-1, k, 2) - kmeans.cluster_centers_, axis=2)"
       ],
       "metadata": {
-        "id": "Jr3U08fXr0pL",
-        "outputId": "2b4b812a-881b-4ca9-9f27-94c2f3d65756",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Jr3U08fXr0pL",
+        "outputId": "2b4b812a-881b-4ca9-9f27-94c2f3d65756"
       },
       "execution_count": 21,
       "outputs": [
@@ -872,11 +881,11 @@
         "kmeans_iter3.fit(X)"
       ],
       "metadata": {
-        "id": "5BrfUYKhsycN",
-        "outputId": "01a53a12-c91f-424f-d796-b75c3512d5a7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "5BrfUYKhsycN",
+        "outputId": "01a53a12-c91f-424f-d796-b75c3512d5a7"
       },
       "execution_count": 22,
       "outputs": [
@@ -935,12 +944,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "OrvR6fSpuyn2",
-        "outputId": "a5200afc-df66-4cdf-a3e9-7b242e9ac9de",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 521
-        }
+        },
+        "id": "OrvR6fSpuyn2",
+        "outputId": "a5200afc-df66-4cdf-a3e9-7b242e9ac9de"
       },
       "execution_count": 23,
       "outputs": [
