--- a/hands-on-machine-learning-with-scikit-learn-keras-and-tensorflow/11-training-deep-neural-networks/03_faster_optimizers.ipynb
+++ b/hands-on-machine-learning-with-scikit-learn-keras-and-tensorflow/11-training-deep-neural-networks/03_faster_optimizers.ipynb
@@ -30,7 +30,7 @@
         "id": "6Ko31BpKKyDt"
       },
       "source": [
-        "# Faster Optimizers"
+        "## Faster Optimizers"
       ]
     },
     {
@@ -66,29 +66,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "aM46ucBbWraU",
-        "outputId": "590b4d12-45c0-4a12-a602-92add9fffe74",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "aM46ucBbWraU"
       },
       "source": [
-        "import sys\n",
-        "assert sys.version_info >= (3, 5)  # Python ≥3.5 is required\n",
-        "\n",
-        "import sklearn \n",
-        "assert sklearn.__version__ >= \"0.20\"  # Scikit-Learn ≥0.20 is required\n",
-        "\n",
-        "# %tensorflow_version only exists in Colab.\n",
-        "try:\n",
-        "  %tensorflow_version 2.x\n",
-        "except Exception:\n",
-        "  pass\n",
-        "\n",
         "# TensorFlow ≥2.0 is required\n",
         "import tensorflow as tf\n",
         "from tensorflow import keras\n",
-        "assert tf.__version__ >= '2.0'\n",
         "\n",
         "# Common imports\n",
         "import numpy as np\n",
@@ -110,25 +93,13 @@
         "mpl.rc('xtick', labelsize=12)\n",
         "mpl.rc('ytick', labelsize=12)"
       ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "TensorFlow 2.x selected.\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 1,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zMLGgnfZW2TG",
-        "outputId": "139c44d4-4168-44a1-da39-59b1d1708f82",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "zMLGgnfZW2TG"
       },
       "source": [
         "(X_train_full, y_train_full), (X_test, y_test) = keras.datasets.fashion_mnist.load_data()\n",
@@ -140,22 +111,7 @@
         "y_valid, y_train = y_train_full[:5000], y_train_full[5000:]"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-labels-idx1-ubyte.gz\n",
-            "32768/29515 [=================================] - 0s 0us/step\n",
-            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-images-idx3-ubyte.gz\n",
-            "26427392/26421880 [==============================] - 0s 0us/step\n",
-            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-labels-idx1-ubyte.gz\n",
-            "8192/5148 [===============================================] - 0s 0us/step\n",
-            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-images-idx3-ubyte.gz\n",
-            "4423680/4422102 [==============================] - 0s 0us/step\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -174,14 +130,14 @@
       "source": [
         "Recall that Gradient Descent simply updates the weights θ by directly subtracting the gradient of the cost function J(θ) with regards to the weights (∇θJ(θ)) multiplied by the learning rate η.\n",
         "\n",
-        "<img src='https://github.com/rahiakela/img-repo/blob/master/hands-on-machine-learning-keras-tensorflow/gradient.PNG?raw=1' width='800'/>\n",
+        "<img src='https://github.com/rahiakela/img-repo/blob/master/hands-on-machine-learning-keras-tensorflow/gradient.PNG?raw=1' width='200'/>\n",
         "\n",
         "It does not care about what the earlier gradients were. If the local gradient is tiny, it goes very slowly.\n",
         "\n",
         "Momentum optimization cares a great deal about what previous gradients were: at\n",
         "each iteration, it subtracts the local gradient from the momentum vector m (multiplied by the learning rate η), and it updates the weights by simply adding this momentum vector.\n",
         "\n",
-        "<img src='https://github.com/rahiakela/img-repo/blob/master/hands-on-machine-learning-keras-tensorflow/momentum-algo.PNG?raw=1' width='800'/>\n",
+        "<img src='https://github.com/rahiakela/img-repo/blob/master/hands-on-machine-learning-keras-tensorflow/momentum-algo.PNG?raw=1' width='400'/>\n",
         "\n",
         "In other words, the gradient is used for acceleration,\n",
         "not for speed. To simulate some sort of friction mechanism and prevent the\n",
@@ -216,7 +172,7 @@
       "source": [
         "One small variant to Momentum optimization is almost always faster than vanilla Momentum optimization. The idea of Nesterov Momentum optimization, or Nesterov Accelerated Gradient (NAG), is to measure the gradient of the cost function not at the local position but slightly ahead in the direction of the momentum.\n",
         "\n",
-        "<img src='https://github.com/rahiakela/img-repo/blob/master/hands-on-machine-learning-keras-tensorflow/nesterov-algo.PNG?raw=1' width='800'/>\n",
+        "<img src='https://github.com/rahiakela/img-repo/blob/master/hands-on-machine-learning-keras-tensorflow/nesterov-algo.PNG?raw=1' width='400'/>\n",
         "\n",
         "NAG will almost always speed up training compared to regular Momentum optimization. To use it, simply set nesterov=True when creating the SGD optimizer.\n",
         "\n",
@@ -225,7 +181,7 @@
         "```\n",
         "This small tweak works because in general the momentum vector will be pointing in the right direction (i.e., toward the optimum), so it will be slightly more accurate to use the gradient measured a bit farther in that direction rather than using the gradient at the original position.\n",
         "\n",
-        "<img src='https://github.com/rahiakela/img-repo/blob/master/hands-on-machine-learning-keras-tensorflow/nesterov-momentum-optimization.PNG?raw=1' width='800'/>"
+        "<img src='https://github.com/rahiakela/img-repo/blob/master/hands-on-machine-learning-keras-tensorflow/nesterov-momentum-optimization.PNG?raw=1' width='400'/>"
       ]
     },
     {
@@ -245,14 +201,14 @@
       "source": [
         "The AdaGrad algorithm achieves this by scaling down the gradient vector along the steepest dimensions.\n",
         "\n",
-        "<img src='https://github.com/rahiakela/img-repo/blob/master/hands-on-machine-learning-keras-tensorflow/adagrad-algo.PNG?raw=1' width='800'/>\n",
+        "<img src='https://github.com/rahiakela/img-repo/blob/master/hands-on-machine-learning-keras-tensorflow/adagrad-algo.PNG?raw=1' width='400'/>\n",
         "\n",
         "* The first step accumulates the square of the gradients into the vector s (recall that the ⊗ symbol represents the element-wise multiplication).If the cost function is steep along the ith dimension, then si will get larger and larger at each iteration.\n",
         "* The second step is almost identical to Gradient Descent, but with one big difference: the gradient vector is scaled down by a factor of square root of s + epsilon(the ⊘ symbol represents the element-wise division, and ϵ is a smoothing term to avoid division by zero, typically set to 10–10).\n",
         "\n",
         "This algorithm decays the learning rate, but it does so faster for steep dimensions than for dimensions with gentler slopes. This is called an adaptive learning rate. It helps point the resulting updates more directly toward the global optimum.One additional benefit is that it requires much less tuning of the learning rate hyperparameter η.\n",
         "\n",
-        "<img src='https://github.com/rahiakela/img-repo/blob/master/hands-on-machine-learning-keras-tensorflow/adagrad-versus-gradient-descent.PNG?raw=1' width='800'/>\n",
+        "<img src='https://github.com/rahiakela/img-repo/blob/master/hands-on-machine-learning-keras-tensorflow/adagrad-versus-gradient-descent.PNG?raw=1' width='400'/>\n",
         "\n",
         "AdaGrad often performs well for simple quadratic problems, but unfortunately it\n",
         "often stops too early when training neural networks. The learning rate gets scaled\n",
@@ -285,7 +241,7 @@
         "Although AdaGrad slows down a bit too fast and ends up never converging to the\n",
         "global optimum, the RMSProp algorithm15 fixes this by accumulating only the gradients from the most recent iterations (as opposed to all the gradients since the beginning of training). It does so by using exponential decay in the first step.\n",
         "\n",
-        "<img src='https://github.com/rahiakela/img-repo/blob/master/hands-on-machine-learning-keras-tensorflow/rmsprop-algo.PNG?raw=1' width='800'/>\n",
+        "<img src='https://github.com/rahiakela/img-repo/blob/master/hands-on-machine-learning-keras-tensorflow/rmsprop-algo.PNG?raw=1' width='400'/>\n",
         "\n",
         "The decay rate β is typically set to 0.9. Yes, it is once again a new hyperparameter, but\n",
         "this default value often works well, so you may not need to tune it at all.\n",
@@ -314,7 +270,7 @@
       "source": [
         "Adam, which stands for adaptive moment estimation, combines the ideas of Momentum optimization and RMSProp: just like Momentum optimization it keeps track of an exponentially decaying average of past gradients, and just like RMSProp it keeps track of an exponentially decaying average of past squared gradients.\n",
         "\n",
-        "<img src='https://github.com/rahiakela/img-repo/blob/master/hands-on-machine-learning-keras-tensorflow/adam-algo.PNG?raw=1' width='800'/>\n",
+        "<img src='https://github.com/rahiakela/img-repo/blob/master/hands-on-machine-learning-keras-tensorflow/adam-algo.PNG?raw=1' width='400'/>\n",
         "\n",
         "If you just look at steps 1, 2, and 5, you will notice Adam’s close similarity to both Momentum optimization and RMSProp. The only difference is that step 1 computes an exponentially decaying average rather than an exponentially decaying sum, but these are actually equivalent except for a constant factor (the decaying average is just 1 – β1 times the decaying sum).\n",
         "\n",
@@ -353,7 +309,7 @@
         "Finding a good learning rate can be tricky. If you set it way too high, training may actually diverge.If you set it too low, training will\n",
         "eventually converge to the optimum, but it will take a very long time. If you set it slightly too high, it will make progress very quickly at first, but it will end up dancing around the optimum, never really settling down. If you have a limited computing budget, you may have to interrupt training before it has converged properly, yielding a suboptimal solution.\n",
         "\n",
-        "<img src='https://github.com/rahiakela/img-repo/blob/master/hands-on-machine-learning-keras-tensorflow/learning-curves.PNG?raw=1' width='800'/>\n",
+        "<img src='https://github.com/rahiakela/img-repo/blob/master/hands-on-machine-learning-keras-tensorflow/learning-curves.PNG?raw=1' width='600'/>\n",
         "\n",
         "However, you can do better than a constant learning rate: if you start with a high learning rate and then reduce it once it stops making fast progress, you can reach a good solution faster than with the optimal constant learning rate. There are many different strategies to reduce the learning rate during training. These strategies are called learning schedules, the most common\n",
         "of which are:\n",
