--- a/hands-on-machine-learning-with-scikit-learn-keras-and-tensorflow/12-custom-models-and-training-with-tensorflow/03_customizing_models_and_araining_algorithms.ipynb
+++ b/hands-on-machine-learning-with-scikit-learn-keras-and-tensorflow/12-custom-models-and-training-with-tensorflow/03_customizing_models_and_araining_algorithms.ipynb
@@ -6,7 +6,7 @@
       "name": "03-customizing-models-and-araining-algorithms.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNL4YhMaBqr6j2ji6HxNnE1",
+      "authorship_tag": "ABX9TyNdgPLgW8iuAzrbCtreIMRS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -104,7 +104,7 @@
       "metadata": {
         "id": "G0vsm-w4K5z-"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -141,7 +141,7 @@
       "metadata": {
         "id": "YJx_TeqwMqer"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -166,7 +166,7 @@
       "metadata": {
         "id": "xxGN7XDYM_rm"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -195,7 +195,7 @@
         "id": "0A8Juuq8NK-v",
         "outputId": "cfccdfb6-d6b7-4cff-8fe5-c8c32afbb4ab"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -224,7 +224,7 @@
       "metadata": {
         "id": "jaUIqSISNU8y"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -235,7 +235,7 @@
       "metadata": {
         "id": "hG7FTUgzNbZO"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -250,7 +250,7 @@
         "id": "cM67pzS0NhYT",
         "outputId": "a6a09982-025f-43c9-a660-e015305b263e"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -277,7 +277,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##Saving and loading models with custom components"
+        "**Saving and loading models with custom components**"
       ],
       "metadata": {
         "id": "L26OoJuuKxSh"
@@ -291,7 +291,7 @@
       "metadata": {
         "id": "VKGGRfWaNtLu"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -303,7 +303,7 @@
       "metadata": {
         "id": "HmwufhgHNzPN"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -318,7 +318,7 @@
         "id": "oD5-cthaOHLL",
         "outputId": "012f8699-a8ca-4c0c-90ca-3791ae516b63"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -369,7 +369,7 @@
       "metadata": {
         "id": "RQQr9U8rOehx"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -380,7 +380,7 @@
       "metadata": {
         "id": "Drr7xEVjOuFj"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -395,7 +395,7 @@
         "id": "7vhVECLEPCeT",
         "outputId": "768e51ea-584b-4ef0-bcbd-9eeaeb074721"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -427,7 +427,7 @@
       "metadata": {
         "id": "Hqpkk_ptO2uE"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -447,7 +447,7 @@
       "metadata": {
         "id": "IIA4Do0xPHT-"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -462,7 +462,7 @@
         "id": "3NMZ2b2TPN-Q",
         "outputId": "d291e242-2193-4391-97a5-745db65424b6"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -517,7 +517,7 @@
       "metadata": {
         "id": "reI9tDGePbv3"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -528,7 +528,7 @@
       "metadata": {
         "id": "4-7gE56vTdvi"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -543,7 +543,7 @@
         "id": "EVVc0VXBOYtA",
         "outputId": "0dafcf38-0aa9-439e-d90f-0dc3fee98250"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -575,7 +575,7 @@
       "metadata": {
         "id": "6BOLFO23OfSE"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -586,7 +586,7 @@
       "metadata": {
         "id": "xk6t-VhlPxj5"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -601,7 +601,7 @@
         "id": "t2Q3tjFIP9Vi",
         "outputId": "15324262-449e-42ab-8aeb-511c44ad6d95"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -638,7 +638,7 @@
         "id": "qsdJvR3KQGrU",
         "outputId": "4b561ddb-549a-4bbf-b0f0-04f93dc22193"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
